# TeleFucker

./: .gitignore  config.py  main.py  manager.py  misc.py  models.py  pyproject.toml
executors/: __init__.py  asyncio.py  base.py
functions/: __init__.py  unlocker.py
modules/: __init__.py  add.py  base.py  check.py  ddos.py  killer.py  spam.py
utils/: __init__.py  brusificator.py  client.py  determiner.py  input.py
utils/convert/: __init__.py  _tdata.py  convert.py
