[tool.poetry]
name = "telefucker"
version = "0.1.0"
description = ""
authors = ["spy"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.3.4"
telethon = {git = "https://github.com/LonamiWebs/Telethon.git", rev = "v1"}
PySocks = "^1.7.1"
pydantic = "^1.10.7"
loguru = "^0.7.0"
cryptg = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
